<resources>
    <string name="app_name">Riegomatic</string>
    <string name="welcome">Bienvenido</string>
    <string name="login">Ingresar</string>
    <string name="status">Estado</string>
    <string name="humidity">Humedad</string>
    <string name="water">Nivel de Agua</string>
    <string name="watering">Regar</string>
    <string name="power">ON / OFF</string>
    <string name="main">Welcome View</string>
    <string name="home">Riegomatic View</string>
    <string name="back">&lt; Regresar</string>
</resources>