<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/allura"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="78sp"
            tools:textAlignment="center" />

        <LinearLayout
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/status"
                android:textSize="24sp"
                tools:textAlignment="center" />

            <TextView
                android:id="@+id/x1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="ACA VA ESTADO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/humidity"
                    android:textSize="24sp"
                    tools:textAlignment="center" />

                <TextView
                    android:id="@+id/X2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="HUMEDAD"
                    tools:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/water"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/water"
                    android:textSize="24sp"
                    tools:textAlignment="center" />

                <TextView
                    android:id="@+id/X3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="AGUA"
                    tools:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/login"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:text="@string/watering"
                android:textSize="20sp" />

            <Button
                android:id="@+id/power"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/power"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="#00FFFFFF"
            android:text="@string/back"
            android:textColor="#000000"
            tools:fontFamily="monospace" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>